# LewLang

./: CMakeLists.txt  README.md
lexer/: lexer.h  token.h
parser/: parser.cpp  parser.h
samples/: tests.lew
src/: main.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: ast.cpp  ast.h  parser.cpp
src/visitor/: semantic_analysis.cpp  semantic_analysis.h  xml_visitor.cpp
visitor/: interpreter.cpp  interpreter.h  visitor.h  xml_visitor.h
